fix: use mCustomScrollbar ogame theme for chat history scrollbar

--- a/resources/css/ingame/469500b3cd5158332fb20a56b14b2c.css
+++ b/resources/css/ingame/469500b3cd5158332fb20a56b14b2c.css
@@ -9881,7 +9881,6 @@ div#buddyCopyOverlay .code {
 /* ***************** Single Chat ******************************************** */
 
 .largeChatContainer { max-height: 500px; overflow: hidden; }
-#chat .largeChatContainer { overflow-y: auto; }
 #chat .largeChatContainer ul.chat { margin: 0; padding: 5px; list-style: none; }
 #chat .largeChatContainer ul.chat .chat_msg:first-child { margin-top: 0; }
 
